working test stubs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
 version: '3.8'
 
 services:
-  flask-app:
+  joyride:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
       - "5000:5000"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     env_file:
       - .env
     restart: unless-stopped
