cleanup and organizing

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,13 @@
   "build": {
     "dockerfile": "../Dockerfile",
     "target": "development",
-    "context": ".."
+    "context": "..",
+    "args": {
+      "USER": "vscode"
+    },
+    "options": [
+      "--progress=plain"
+    ]
   },
   "features": {
     "ghcr.io/devcontainers/features/git:1": {}
@@ -32,6 +38,16 @@
         "editor.formatOnSave": true,
         "editor.codeActionsOnSave": {
           "source.organizeImports": "explicit"
+        },
+        "git.enabled": false,
+        "terminal.integrated.defaultProfile.windows": "PowerShell",
+        "terminal.integrated.profiles.windows": {
+          "PowerShell": {
+            "source": "PowerShell",
+            "args": [
+              "-NoLogo"
+            ]
+          }
         }
       }
     }
@@ -51,6 +67,7 @@
     "--env-file",
     ".env"
   ],
+  "initializeCommand": "docker buildx version || echo 'BuildKit not available'",
   "mounts": [
     "source=devcontainer-home,target=/home/vscode,type=volume",
     "source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached",
