--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,16 @@
 {
-  "name": "Python Flask Development",
+  "name": "Joyride",
   "build": {
     "dockerfile": "../Dockerfile",
     "target": "development",
     "context": "..",
-    "args": {
-      "USER": "vscode"
-    },
     "options": [
       "--progress=plain"
-    ]
+    ],
+    "args": {
+      "USER": "vscode",
+      "WORKDIR": "/workspace"
+    }
   },
   "features": {
     "ghcr.io/devcontainers/features/git:1": {}
@@ -57,7 +58,7 @@
   ],
   "portsAttributes": {
     "5000": {
-      "label": "Flask Development Server",
+      "label": "joyride",
       "onAutoForward": "notify"
     }
   },
@@ -65,7 +66,9 @@
   "remoteUser": "vscode",
   "runArgs": [
     "--env-file",
-    ".env"
+    ".env",
+    "--hostname",
+    "joyride"
   ],
   "initializeCommand": "docker buildx version || echo 'BuildKit not available'",
   "mounts": [
