--- a/.gitignore
+++ b/.gitignore
@@ -14,14 +14,12 @@ dist/
 .pytest_cache/
 .coverage
 coverage.xml
-htmlcov/
+.htmlcov/
 
 # Environment variables
 .env
-.env.local
-.env.production
-.env.staging
-.env.test
+.env.*
+
 
 .install-*
 
