--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -18,6 +18,8 @@ services:
       - ENVIRONMENT=production
       # Enable hosts file monitoring
       - HOSTS_DIRECTORY=/app/hosts
+      # Application version from Makefile/git tags
+      - SEMANTIC_VERSION=${SEMANTIC_VERSION:-dev}
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
