--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,10 @@ instance/
 # Development tools
 .mypy_cache/
 
+# UV
+uv.lock
+
+# Submodules - track reference but ignore local changes during development
+# (swimmies is a Git submodule for library development)
+
 nul
