--- a/.devcontainer/Makefile
+++ b/.devcontainer/Makefile
@@ -9,31 +9,29 @@ initialize:
 	@echo "SEMANTIC_VERSION=$(SEMANTIC_VERSION)" >> .devcontainer/.env
 	
 
-# Install development dependencies (only if requirements-dev.txt changed)
-.install-dev: requirements-dev.txt
-	@echo "Installing development dependencies..."
-	uv pip install --system -r requirements-dev.txt
-	@touch .install-dev
+# Install development dependencies (only if pyproject.toml changed)
+uv.lock:
+	uv sync --extra dev
 
 # Run tests with coverage
-test: .install-dev
+test: uv.lock
 	@echo "Running tests with coverage..."
-	pytest tests/ --cov=app --cov-report=term-missing --cov-report=html:.htmlcov
+	uv run pytest tests/ --cov=app --cov-report=term-missing --cov-report=html:.htmlcov
 
 # Run linting
 # E203: whitespace before ':' (conflicts with black formatting)
 # W503: line break before binary operator (conflicts with black formatting)
 # E501: line too long (disabled to match black's line length handling)
-lint: .install-dev
-	flake8 app tests --extend-ignore=E203,W503,E501
+lint: uv.lock
+	uv run flake8 app tests --extend-ignore=E203,W503,E501
 	@echo "Linting completed successfully!"
 
 # Format code
-format: .install-dev
+format: uv.lock
 	@echo "Formatting code with black..."
-	black app tests 
+	uv run black app tests 
 	@echo "Organizing imports with isort..."
-	isort app tests --profile black
+	uv run isort app tests --profile black
 	@echo "Removing trailing whitespace..."
 	find app tests -name "*.py" -exec sed -i 's/[[:space:]]*$$//' {} \;
 	@echo "Code formatting completed!"
@@ -44,8 +42,7 @@ clean:
 	find . -type f -name "*.pyc" -delete
 	find . -type d -name "__pycache__" -delete
 	find . -type d -name "*.egg-info" -exec rm -rf {} +
-	rm -rf .coverage .htmlcov/ .pytest_cache/
-	rm -f .install-prod .install-dev
+	rm -rf .coverage .htmlcov/ .pytest_cache/ .venv/
 	@rm -f /tmp/joyride-dns.pid 2>/dev/null || true
 	@echo "Clean completed!"
 
@@ -61,8 +58,8 @@ dns-status:
 	@curl -s http://localhost:5000/dns/records | python -m json.tool || echo "❌ Could not fetch DNS records"
 
 # Start Joyride DNS server in background (real target based on PID file)
-/tmp/joyride-dns.pid: .install-dev
-	python -m app.main &
+/tmp/joyride-dns.pid: uv.lock
+	uv run joyride &
 	@sleep 2
 
 
@@ -74,11 +71,11 @@ stop-app:
 
 # Run Flask application locally
 run:
-	@FLASK_DEBUG=true python -m app.main
+	@FLASK_DEBUG=true uv run joyride
 
 
 # Docker testing commands (requires Docker-in-Docker)
-test-docker: .install-dev /tmp/joyride-dns.pid
+test-docker: uv.lock /tmp/joyride-dns.pid
 	@docker run --rm -d --name test-joyride --label joyride.host.name=test.internal nginx:alpine >/dev/null
 	@sleep 2
 	
