--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ instance/
 
 # UV
 uv.lock
+.venv/
 
 # Submodules - track reference but ignore local changes during development
 # (swimmies is a Git submodule for library development)
