--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -63,7 +63,7 @@
       "onAutoForward": "ignore"
     }
   },
-  "postCreateCommand": "uv pip install --system -r requirements-dev.txt && ./.devcontainer/setup-dotfiles.sh",
+  "postCreateCommand": "uv sync --extra dev && ./.devcontainer/setup-dotfiles.sh",
   "remoteUser": "vscode",
   "runArgs": [
     "--env-file",
