--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -1,8 +1,6 @@
 services:
   joyride:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ghcr.io/ilude/joyride-python:latest
     network_mode: host
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
