return the docker compose build and move SEMANTIC_VERSION to be a build arg in production

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -80,6 +80,8 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64,linux/arm64
+          build-args: |
+            SEMANTIC_VERSION=${{ github.ref_name }}
 
       - name: Create GitHub Release
         if: startsWith(github.ref, 'refs/tags/v')
