--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -126,6 +126,12 @@ jobs:
             ```
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Get short SHA
+        uses: benjlevesque/short-sha@v3.0
+        id: short-sha
+        with:
+          length: 7
 
       - name: Discord notification
         env:
@@ -137,12 +143,11 @@ jobs:
           color: '#ff00aa'
           avatarUrl: https://github.githubassets.com/images/modules/logos_page/Octocat.png
           description: |
-            New ${{ github.event.repository.name }} images
+            **The following ${{ github.event.repository.name }} images have been published:**
             ${{ steps.meta.outputs.tags }}
-            have been published!
           details: |
             📦 **Repository:** https://${{ github.server_url }}/${{ github.repository }}
-            🔧 **Commit:** [${{ github.ref_name }}](${{ github.event.head_commit.url }})
+            🔧 **Commit:** [${{ steps.short-sha.outputs.sha }}](${{ github.event.head_commit.url }})
           footer: MafenBot became self aware
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
