--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -147,8 +147,10 @@ jobs:
           details: |
 
             ${{ steps.meta.outputs.tags }}
-            
+
             **For Commit:** [${{ steps.short-sha.outputs.sha }}](${{ github.event.head_commit.url }})
+            ** Changes: **
+            ${{ github.event.head_commit.message }}
           footer: MafenBot became self aware
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
