fix: resolve circular dependency issue in DNS callback system
This commit resolves a critical production issue where the application would
hang during startup when using compose-onramp.yaml due to a circular
dependency in the DNS callback system.

## Root Cause
The issue was caused by self-referential Docker container labels
(joyride.host.name) that created an infinite callback loop:
- Docker monitor processes container with joyride.host.name label
- Calls dns_record_callback()
- dns_record_callback() calls dns_sync_manager.add_dns_record()
- dns_sync_manager calls back to dns_record_callback()
- Infinite recursion resulted in application hanging

## Solution
Added local_only parameter to DNS sync manager methods to break
the circular dependency:

### Core Changes:
- **app/dns_sync_manager.py**: Added local_only parameter to
  add_dns_record() and remove_dns_record() methods that prevents
  callbacks when set to True
- **app/main.py**: Modified dns_record_callback() to use
  local_only=True when calling DNS sync manager, breaking the loop
- **app/docker_monitor.py**: Enhanced with deferred container
  processing to prevent race conditions during startup

### Production Fixes:
- Added compose-onramp.yaml with production Traefik labels
- Implemented proper service initialization order
- Enhanced error handling and logging cleanup

### Comprehensive Testing:
- **tests/test_circular_dependency_prevention.py**: 14 unit tests
  specifically targeting circular dependency scenarios
- **tests/test_integration_circular_dependency_fix.py**: 6 integration
  tests simulating the exact production failure scenario
- All tests validate local_only parameter behavior
- Concurrent operation stability testing
- Backward compatibility verification

## Verification
✅ Application now starts successfully with compose-onramp.yaml
✅ Self-referential containers processed without infinite loops
✅ All existing functionality preserved
✅ 52 tests passing including new regression prevention tests


--- a/.devcontainer/Makefile
+++ b/.devcontainer/Makefile
@@ -96,6 +96,41 @@ test-example-down:
 	docker compose -f docker-compose.example.yml down
 	@echo "✅ Example setup stopped!"
 
+# Rebuild production image and start with docker-compose.yml
+prod-start:
+	@echo "Rebuilding production Docker image and starting with docker-compose.yml..."
+	docker compose down --remove-orphans || true
+	docker compose build 
+	docker compose up --force-recreate --remove-orphans -d
+	@echo "✅ Production setup started!"
+	@echo "Access web interface: http://localhost:5000"
+	@echo ""
+	@echo "Check status:"
+	@echo "  docker compose ps"
+	@echo "  docker compose logs -f"
+
+# Stop production Docker Compose setup
+prod-down:
+	@echo "Stopping production Docker Compose setup..."
+	docker compose down --remove-orphans
+	@echo "✅ Production setup stopped!"
+
+# Show logs from production setup
+prod-logs:
+	docker compose logs -f
+
+prod-dump-logs:
+	docker compose logs
+
+# Show status of production setup
+prod-status:
+	@echo "Production Docker Compose Status:"
+	@echo "================================="
+	docker compose ps
+	@echo ""
+	@echo "DNS Records:"
+	@curl -s http://localhost:5000/dns/records | python -m json.tool 2>/dev/null || echo "❌ Could not fetch DNS records"
+
 # Show logs from example setup
 test-example-logs:
 	docker compose -f docker-compose.example.yml logs -f
