--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
   "gunicorn==21.2.0",
   "pydantic==2.8.2",
   "python-dotenv==1.0.0",
+  "pyyaml>=6.0.2",
 ]
 
 [project.optional-dependencies]
@@ -67,6 +68,20 @@ py-modules = ["run"]
 [build-system]
 requires = ["setuptools>=45", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[dependency-groups]
+dev = [
+    "black>=23.12.1",
+    "docker>=7.1.0",
+    "flake8>=7.0.0",
+    "isort>=5.13.2",
+    "mypy>=1.17.1",
+    "pytest>=7.4.3",
+    "pytest-asyncio>=0.23.8",
+    "pytest-cov>=4.1.0",
+    "pytest-mock>=3.14.1",
+    "testcontainers[docker]>=4.12.0",
+]
 
 [tool.uv.sources]
 swimmies = { workspace = true }
