--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ build-backend = "setuptools.build_meta"
 
 [dependency-groups]
 dev = [
+    "bandit>=1.8.6",
     "black>=23.12.1",
     "docker>=7.1.0",
     "flake8>=7.0.0",
@@ -81,6 +82,7 @@ dev = [
     "pytest-cov>=4.1.0",
     "pytest-mock>=3.14.1",
     "testcontainers[docker]>=4.12.0",
+    "types-pyyaml>=6.0.12.20250516",
 ]
 
 [tool.uv.sources]
