--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
   "pydantic==2.8.2",
   "python-dotenv==1.0.0",
   "pyyaml>=6.0.2",
+  "psutil>=7.0.0",
 ]
 
 [project.optional-dependencies]
